--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,6 @@ bleach
 Flask
 Flask-Caching
 Flask-Compress
-Flask-Limiter==1.1.0
 Flask-Markdown
 gevent
 greenlet
@@ -17,7 +16,7 @@ pyotp
 qrcode
 redis
 requests
-SQLAlchemy==1.3.19
+SQLAlchemy
 psycopg2-binary
 pusher_push_notifications
 youtube-dl
